--- a/vafpress/public/css/option.css
+++ b/vafpress/public/css/option.css
@@ -419,6 +419,12 @@ body {
 	padding: 15px 30px 15px 20px;
 }
 
+.vp-section tr > .fields img {
+	border: 1px solid #dddddd;
+	border-radius: 3px;
+	padding: 3px;
+}
+
 .vp-section tr > .fields .input {
 	position: relative;
 }
@@ -502,11 +508,8 @@ body {
 
 .vp-section tr.vp-checkimage .fields img,
 .vp-section tr.vp-radioimage .fields img {
-	border: 1px solid #dddddd;
-	border-radius: 3px;
 	min-height: 16px;
 	min-width: 16px;
-	padding: 3px;
 }
 
 .vp-section tr.vp-checkimage .fields input:checked ~ img,
